// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typo should render default 1`] = `
"<Component theme={{...}}>
  <Typo>
    <Typostyled__StyledInfoTypo as=\\"span\\" tag=\\"span\\">
      <span className=\\"Typostyled__StyledInfoTypo-sc-1o9a6sy-0 dPGFds\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis euismod ligula.
      </span>
    </Typostyled__StyledInfoTypo>
  </Typo>
</Component>"
`;

exports[`Typo should render different tags 1`] = `
"<Component theme={{...}}>
  <Typo tag=\\"div\\">
    <Typostyled__StyledInfoTypo as=\\"div\\" tag=\\"div\\">
      <div className=\\"Typostyled__StyledInfoTypo-sc-1o9a6sy-0 dPGFds\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis euismod ligula.
      </div>
    </Typostyled__StyledInfoTypo>
  </Typo>
</Component>"
`;

exports[`Typo should render different tags 2`] = `
"<Component theme={{...}}>
  <Typo tag=\\"p\\">
    <Typostyled__StyledInfoTypo as=\\"p\\" tag=\\"p\\">
      <p className=\\"Typostyled__StyledInfoTypo-sc-1o9a6sy-0 dPGFds\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis euismod ligula.
      </p>
    </Typostyled__StyledInfoTypo>
  </Typo>
</Component>"
`;

exports[`Typo should render different tags 3`] = `
"<Component theme={{...}}>
  <Typo tag=\\"h1\\">
    <Typostyled__StyledInfoTypo as=\\"h1\\" tag=\\"h1\\">
      <h1 className=\\"Typostyled__StyledInfoTypo-sc-1o9a6sy-0 dPGFds\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis euismod ligula.
      </h1>
    </Typostyled__StyledInfoTypo>
  </Typo>
</Component>"
`;
